# vector-2d

./: CMakeLists.txt  VectorConfig.cmake.in
source/: CMakeLists.txt  vec.h  vec2.h
source/dm/: elementwise.h  math.h  vector.h  vector_internal.h
tests/: CMakeLists.txt  elementwise_test.cpp  vector_test.cpp
